cv button mobile fix

--- a/scss/skeleton.scss
+++ b/scss/skeleton.scss
@@ -468,19 +468,22 @@ section#cv {
   	transform: translateX(-50%) translateY(-50%) rotate(45deg);
   }
 
-  .btn-1e:hover,
-  .btn-1e:active {
-  	color: #DE3C4B;
-  }
+  // Larger than phablet (also point when grid becomes active)
+  @media (#{$bp-larger-than-phablet}) {
+    .btn-1e:hover,
+    .btn-1e:active {
+    	color: #DE3C4B;
+    }
 
-  .btn-1e:hover:after {
-  	height: 260%;
-  	opacity: 1;
-  }
+    .btn-1e:hover:after {
+    	height: 260%;
+    	opacity: 1;
+    }
 
-  .btn-1e:active:after {
-  	height: 400%;
-  	opacity: 1;
+    .btn-1e:active:after {
+    	height: 400%;
+    	opacity: 1;
+    }
   }
 }
 section#contact {
